[package]
name = "rmk-cannonball-ll"
version = "0.1.0"
edition = "2024"
description = "Cannonball LL reset-bootloader firmware (wipes storage, re-enters UF2 DFU)"

[dependencies]
cortex-m = "0.7.7"
cortex-m-rt = "0.7.5"
panic-halt = "1.0"

[[bin]]
name = "rmk-cannonball-ll"
test = false
bench = false

[profile.release]
codegen-units = 1
debug = false
opt-level = "z"
overflow-checks = false
lto = "fat"
